syntax = "proto3";
package org.virajsalaka.grpc;


service HelloWorld {
    rpc hello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string input = 1;
}

message HelloReply {
    string output = 1;
}